Changelog
=========


2.0.1 (unreleased)
------------------

- Add "getContentType" method to ftw.file.File to support legazy code. [mathias.leimgruber]


2.0.0 (2019-10-30)
------------------

- Move to Dexterity, remove Archetypes functionality (but not models)
  [mathias.leimgruber, djowett-ftw]
- Add AT to DX migration step [mathias.leimgruber, djowett-ftw]
- Remove TinyMCE integration [djowett-ftw]
- Rename model fields while migrating to dexterity [djowett-ftw]
- Stop drag and drop upload adding two versions [jone, djowett-ftw]
- Add uninstall profile [djowett-ftw]


1.16.2 (2019-05-14)
-------------------

- Improve umlaut support for MSIE file download [busykoala]


1.16.1 (2019-04-02)
-------------------

- Add umlaut support for MSIE file download [busykoala]


1.16.0 (2018-10-16)
-------------------

- Protect the edit form tab (schemata) for the expiration date and effective date
  with a separate permission. [mbaechtold]


1.15.0 (2018-03-14)
-------------------

- Drop support for Plone 4.2. [mbaechtold]

- Prevent exception upon HEAD requests to the download view of a file. [mbaechtold]


1.14.0 (2017-11-16)
-------------------

- A new registry record can be used to prevent redirects to the download
  view of the file. [mbaechtold]

- Rewrite download redirection tests using ftw.testbrowser, drop dependency on
  ftw.testing[splinter]. [lgraf]


1.13.0 (2017-05-15)
-------------------

- Added option to download file with inline content-disposition header. [lknoepfel]

- A new option on the file can be used to protect a file. Protected files
  cannot be deleted by anyone until the option is unchecked. [mbaechtold]


1.12.0 (2016-11-24)
-------------------

- Record ftw.activity event when file downloaded. [jone]

- Eliminate bad security declarations through interface. [jone]

- Simplify schema inheritance. [jone]

- Fix security declarations for getOriginFilename, is_image and getField. [jone]


1.11.5 (2016-07-19)
-------------------
