@@ -1,0 +1,10 @@
+<?xml version="1.0"?>
+<object
+    i18n:domain="plone"
+    meta_type="Dexterity FTI"
+    name="ftw.file"
+    xmlns:i18n="http://xml.zope.org/namespaces/i18n">
+
+    <property name="factory">ftw.file.File</property>
+
+</object>
